--- a/css/main.css
+++ b/css/main.css
@@ -726,7 +726,7 @@ ul {
 .hero {
   width: 1600px;
   background-color: var(--additional-color);
-  background-image: url(/images/hero-img.jpg), to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
+  background-image: url(/images/hero-img.jpg), linear-gradient to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 1600px;
