--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -14,8 +14,8 @@
     width: 1600px;
     background-color: var(--additional-color);
     background-image:
-   
-    url(/images/hero-img.jpg),linear-gradient (to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    linear-gradient (to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4),
+    url(/images/hero-img.jpg));
     background-repeat: no-repeat;
     background-position: center;
     background-size:1600px;
